# hrsl-up

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
hrsl_up/: __init__.py  download.py
hrsl_up/scripts/: cli.py
