[tool.poetry]
name = "hrsl_up"
version = "0.1.0"
description = "Download and Upload HRSL data"
authors = ["Tyler Anderson"]
packages = [
    { include = "hrsl_up" }
]

[tool.poetry.dependencies]
python = "^3.8"
s3fs = "^2021.4.0"
earthengine-api = "^0.1.262"
gcsfs = "^2021.4.0"
click = "^7.1.2"
tqdm = "^4.60.0"

[tool.poetry.dev-dependencies]
black = "^21.4b1"

[tool.poetry.scripts]
hrsl_up = "hrsl_up.scripts.cli:cli"
